data/derived/comb/progs/unify/prog0685.ml.out
Characters 155-192:
  counter = additivePersistence num + 1;;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
